<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TIC - TAC - TOE</string>
    <string name="msgAccueil">Bienvenue !</string>
    <string name="msgOnePlayer">Mode un joueur</string>
    <string name="msgTwoPlayer">Mode deux joueurs</string>
    <string name="msgCredit">Crédit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mode_un_joueur">Mode un joueur</string>
    <string name="msgPlayerName">Nom du joueur :</string>
    <string name="msgSymbol">Choix symbole :</string>
    <string name="msgFirstToPlay">Premier à jouer :</string>
    <string name="msgDifficulty">Difficulté :</string>
    <string name="msgEasy">Facile</string>
    <string name="msgMiddle">Moyen</string>
    <string name="msgHard">Difficile</string>
    <string name="msgPlayerName1">Nom J1 :</string>
    <string name="msgPlayerName2">Nom J2 :</string>
    <string name="msgSymbolPlayer1">Symbole J1 :</string>
    <string name="msgSymbolPlayer2">Symbole J2 :</string>
    <string name="msgLaunchGame">GO !</string>
    <string name="title_activity_game">Game</string>
    <string name="restart">Recommencer</string>
    <string name="home">Accueil</string>
    <string name="hello_world">Hello world!</string>
    <string name="J1">J1</string>
    <string name="J2">J2</string>
    <string name="title_activity_mode_deux_joueurs">ModeDeuxJoueurs</string>
	<string name="developper">Application développée par \nM.Fouzi KHELOUFI</string>
	<string name="remarque">Pour toute remarque ou suggestion :</string>
	<string name="mail">fouzi.kheloufi@u-psud.fr</string>

    <string name="title_activity_game2_player">Game2Player</string>
    <string name="title_activity_credit">Credit</string>

</resources>
