<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/strechbis"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.v2.Credit" >

    <TextView
        android:id="@+id/txtRemarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDevelopper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/remarque"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRemarque"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/mail"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtDevelopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/developper"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtgoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textColor="#fff"
        android:text="@string/home" />

</RelativeLayout>
